--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "angular": "^1.5.8",
     "bootstrap": "^3.3.6",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "angular-toastr": "^2.0.0"
   },
   "overrides": {
     "bootstrap": {
